#12325 closed bug (fixed)
Not obvious that user has to select installed Soundfont
Reported by: | Pete | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Preferences/Media | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When a user installs,their first Soundfont, it duly appears in the Media Preferences MIDI page, but as it is the only one there it isn't clear that it needs to be clicked on to enable it. From experience this confuses people.
A simple fix is to add text to the Preferences page: "Click on the Soundfont you wish to use to enable it", or some such.
Possibly even better would be to have a Soundfont automatically selected when it is installed, so the latest loaded becomes the system one by default. I think this would be expected behaviour by most people, but I'd accept corrections...
A compromise woud be to have it selected only if none were already, but this might lead to other wrong expectations, I suppose.
Change History (5)
comment:1 by , 9 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 9 years ago
comment:3 by , 9 years ago
Actually, when no sound font is selected, it should fall back to using TimGM6mb.sf2 (check BSoftSynth::SetDefaultInstrumentsFile()) . If it's not, then it's a bug. The code in there should also select a "random" soundfont, if that one is not present. About the part about writing the setting file... that was the original plan. Please check ticket #9920, especially Bonefish's comment n. 36, and also the TODO in the beforementioned method. After I worked on the code, though, I failed to find a nice way to do it. Especially, where should it be done ? Is it correct that BSoftSynth::SetDefaultInstrumentFile() also touches user settings ? Alternatively, it could be done in the Media/Midi preflet, but then the user would start it at least once for the soundfont to be selected.
comment:5 by , 9 years ago
I also tested the case where the timgmsoundfont is not present and it falls back correctly to select the first soundfont available in the synth directory.
Selecting a "random" sound font if the user has made no choice sounds fine to me.
Selecting a soundfont automatically when installing may not be the best solution, maybe do it only if there is no existing settings yet? This way we don't silently overwrite suer settings.