BSoftSynth: Fixed auto selection of soundfont. When no midi settings file was available, BSoftSynth should use the well known TimGM6mb.sf2 soundfont. This wasn't working, since the code looked in the wrong path (we have to append "synth" to the path returned by find_directory). In case this SF is not present, now we try harder not to fail, and look for any soundfont available in the system and user directories. Fixes ticket #12325 although the selected soundfont is not written to the user settings file.